[gd_scene load_steps=2 format=3 uid="uid://doftam72qhi5a"]

[ext_resource type="Script" path="res://ui/standalone/editormenu/editor_menu.gd" id="1_agsya"]

[node name="EditorMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agsya")

[node name="LblEditorMenu" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Editor Menu"

[node name="BoxMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnCreate" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Create"

[node name="BtnMainmenu" type="Button" parent="BoxMenu"]
layout_mode = 2
text = "Main Menu"
